# vectorfontstorm

./: .gitignore  CMakeLists.txt  README.md  cast_if_required.h
.github/workflows/: tests.yml
tests/: CMakeLists.txt  tests.cpp
tests/stubs/vectorstorm/vector/: vector2.h
vectorfontstorm/: aligntype.h  buffer.cpp  buffer.h  buffer_data.cpp  buffer_data.h  cast_if_required.h  contour.cpp  contour.h  font.cpp  font.h  glyph.cpp  glyph.h  manager.cpp  manager.h  point.cpp  point.h  segment.cpp  segment.h  string.cpp  string.h  vectorfontstorm.h  vectorfontstorm_forward.h
vectorfontstorm/poly2tri/: poly2tri.h  poly2tri_forward.h  polylinetype.h
vectorfontstorm/poly2tri/common/: shapes.cc  shapes.h  utils.h
vectorfontstorm/poly2tri/sweep/: advancing_front.cc  advancing_front.h  sweep.cc  sweep.h  sweep_context.cc  sweep_context.h
